# MofileReader

./: .clang-format  .gitignore  .travis.yml  CDashCI.cmake  CMakeLists.txt  CTestConfig.cmake  Doxyfile.conf  README.md  annotated.html  annotated_dup.js  appveyor.yml  classes.html  classmo_file_reader-members.html  classmo_file_reader.html  classmo_file_reader.js  classmo_file_reader__coll__graph.map  classmo_file_reader__coll__graph.md5  classmo_file_reader__inherit__graph.map  classmo_file_reader__inherit__graph.md5  classmo_file_reader_singleton-members.html  classmo_file_reader_singleton.html  classmo_file_reader_singleton.js  classmo_file_reader_singleton__coll__graph.map  classmo_file_reader_singleton__coll__graph.md5  conanfile.py  conanfile.txt  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  (+34 more)
.github/workflows/: main.yml  sonarcloud.yml
cmake/: CMakeCM.cmake  FindCatch2.cmake
docs/: config  genDocs.js  package.json
include/: moFileConfig.h  moFileReader.h  moFileReader.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  pages_0.js  search.css  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: mo.cpp  moFileReader.cpp
test/: CMakeLists.txt  compile_mo.sh  extract_pot.sh  link_test.cpp  main.cpp  test.cpp  test.html  test.mo  test.pot
test/languages/: nl.mo  nl.po
